
NEW IN VERSION 4.0
------------------
- Initial release


NEW IN VERSION 4.1
------------------
- Fixes for Qt 4.2 and 4.3.
- Fixes to enable compilation on Windows.
- TIFF and PDF export.
- New translation (ukrainian)


NEW IN VERSION 4.2
------------------
- Better support of Qt/Mac
- Escape can be used to exit full screen mode
- Recent files menu
- Open Location


NEW IN VERSION 4.3
------------------
- Undo/Redo
- New translations (german,czech)
- Fixed double free bug in plugin mode.


NEW IN VERSION 4.4
--------------------
- Full session management under X11.
- Added advanced feature check box.
- Added advanced command to copy urls, outline, etc.
- New translation (russian)
- History in the find dialog.
- Option to display hidden text in status bar.
- Option to display the first page alone in side-by-side mode.
- Option to display side-by-side in right-to-left mode.
- Drag'n drop files into the viewer.
- Support for Lizardtech's plugin option -showposition.


NEW IN VERSION 4.5
--------------------
- Fixed priority of annotation options.
- Fixed plugin for recent versions of gcc.
- Added showposition in advanced option copyUrl.
- New advanced mode to display hidden text.
- Lens display annotations and hidden text.
- Nsdejavu can use the XEmbed protocol when available.
- Plugin is scriptable from JavaScript.


NEW IN VERSION 4.6
--------------------
- Show total page number in page combo and page info box.
- Decode percent encoding in annotation and outline hyperlinks.
- Properly handle non-ascii filenames in export and save dialogs.
- Subtle changes to PgUp/PgDn/Home/End/Space/Backspace view changes.